// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`段階ごとの箱の出力を固定する (#2799) > animation を持たない小さな段階ごとの箱 1`] = `
{
  "edges": [
    {
      "cardinality": undefined,
      "dashOffsetBind": undefined,
      "from": "受付",
      "guard": undefined,
      "head": undefined,
      "headFill": undefined,
      "headLabel": undefined,
      "id": "e0-受付-確認",
      "label": "渡す",
      "labelOffsetX": undefined,
      "labelOffsetY": undefined,
      "labelPlate": undefined,
      "overlay": undefined,
      "role": undefined,
      "routing": "curve",
      "side": undefined,
      "strokeBind": undefined,
      "style": undefined,
      "sub": undefined,
      "tailHead": undefined,
      "tailHeadFill": undefined,
      "tailLabel": undefined,
      "to": "確認",
      "tone": "accent",
      "widthBind": undefined,
    },
  ],
  "id": "段階の固定",
  "lanes": [
    {
      "contain": true,
      "id": "stage-申請",
      "label": "申請 ・ front",
      "width": 340,
    },
    {
      "contain": true,
      "id": "stage-審査",
      "label": "審査 ・ review",
      "width": 340,
    },
  ],
  "nodes": [
    {
      "id": "受付",
      "kind": "actor",
      "lane": "stage-申請",
      "stack": 0,
      "title": "受付",
      "w": 280,
    },
    {
      "id": "確認",
      "kind": "actor",
      "lane": "stage-審査",
      "stack": 0,
      "title": "確認",
      "w": 280,
    },
  ],
  "phases": [
    {
      "activate": [
        "e0-受付-確認",
      ],
      "body": "",
      "duration": 1000,
      "id": "static",
      "sets": [],
      "title": "段階の固定",
      "tweens": [],
    },
  ],
  "states": [],
  "topic": "段階の固定",
  "type": "swimlane",
}
`;

exports[`段階ごとの箱の出力を固定する (#2799) > 見本帳の段階ごとの箱 1`] = `
{
  "edges": [
    {
      "cardinality": undefined,
      "dashOffsetBind": undefined,
      "from": "受け付ける",
      "guard": undefined,
      "head": undefined,
      "headFill": undefined,
      "headLabel": undefined,
      "id": "e0-受け付ける-内容を確かめる",
      "label": "",
      "labelOffsetX": undefined,
      "labelOffsetY": undefined,
      "labelPlate": undefined,
      "overlay": undefined,
      "role": undefined,
      "routing": "curve",
      "side": undefined,
      "strokeBind": undefined,
      "style": undefined,
      "sub": undefined,
      "tailHead": undefined,
      "tailHeadFill": undefined,
      "tailLabel": undefined,
      "to": "内容を確かめる",
      "tone": "accent",
      "widthBind": undefined,
    },
    {
      "cardinality": undefined,
      "dashOffsetBind": undefined,
      "from": "内容を確かめる",
      "guard": undefined,
      "head": undefined,
      "headFill": undefined,
      "headLabel": undefined,
      "id": "e1-内容を確かめる-結果を知らせる",
      "label": "",
      "labelOffsetX": undefined,
      "labelOffsetY": undefined,
      "labelPlate": undefined,
      "overlay": undefined,
      "role": undefined,
      "routing": "curve",
      "side": undefined,
      "strokeBind": undefined,
      "style": undefined,
      "sub": undefined,
      "tailHead": undefined,
      "tailHeadFill": undefined,
      "tailLabel": undefined,
      "to": "結果を知らせる",
      "tone": "accent",
      "widthBind": undefined,
    },
  ],
  "id": "申請を段階と担当で追う",
  "lanes": [
    {
      "contain": true,
      "id": "stage-申請",
      "label": "申請 ・ 窓口",
      "width": 340,
    },
    {
      "contain": true,
      "id": "stage-確認",
      "label": "確認 ・ 審査係",
      "width": 340,
    },
    {
      "contain": true,
      "id": "stage-完了",
      "label": "完了 ・ 窓口",
      "width": 340,
    },
  ],
  "nodes": [
    {
      "id": "受け付ける",
      "kind": "actor",
      "lane": "stage-申請",
      "stack": 1,
      "title": "受け付ける",
      "w": 280,
    },
    {
      "id": "内容を確かめる",
      "kind": "actor",
      "lane": "stage-確認",
      "stack": 0,
      "title": "内容を確かめる",
      "w": 280,
    },
    {
      "id": "結果を知らせる",
      "kind": "actor",
      "lane": "stage-完了",
      "stack": 0,
      "title": "結果を知らせる",
      "w": 280,
    },
  ],
  "phases": [
    {
      "activate": [
        "受け付ける",
      ],
      "badge": "申請",
      "body": "窓口が申請を受け付ける。 最初の段階から次の担当へ渡す準備をする。",
      "duration": 1200,
      "id": "受け付け",
      "sets": [],
      "title": "受け付け",
      "tweens": [],
    },
    {
      "activate": [
        "内容を確かめる",
      ],
      "badge": "確認",
      "body": "審査係が内容を確かめる。 担当が替わっても段階の順は左から右へ進む。",
      "duration": 1200,
      "id": "確認",
      "sets": [],
      "title": "確認",
      "tweens": [],
    },
    {
      "activate": [
        "結果を知らせる",
      ],
      "badge": "完了",
      "body": "窓口が結果を知らせる。 申請から完了までを三つの段階で追える。",
      "duration": 1200,
      "id": "知らせる",
      "sets": [],
      "title": "知らせる",
      "tweens": [],
    },
  ],
  "states": [],
  "topic": "申請を段階と担当で追う",
  "type": "swimlane",
}
`;
